force-app/main/default/objects/Target_Refinement__c/Target_Refinement__c.object-meta.xml
<CustomObject>
    <label>Refinement Questions</label>
    <nameField>
        <displayFormat>TREF-{000000}</displayFormat>
        <label>Target Refinement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refinement Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>