force-app/main/default/objects/Target_Refinement__c/fields/Baseline_Sales_Change__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Sales_Change__c</fullName>
    <label>Baseline Sales Change</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>