force-app/main/default/objects/Target_Refinement__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Comment</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>