force-app/main/default/objects/Target_Refinement__c/fields/Current_Product__c.field-meta.xml
<CustomField>
    <fullName>Current_Product__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>