force-app/main/default/objects/Target_Refinement__c/fields/New_2019_Target__c.field-meta.xml
<CustomField>
    <fullName>New_2019_Target__c</fullName>
    <formula>X2019_Target__c +  Refinement__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final New Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>