force-app/main/default/objects/Target_Refinement__c/fields/New_2019_Target_Growth__c.field-meta.xml
<CustomField>
    <fullName>New_2019_Target_Growth__c</fullName>
    <formula>(New_2019_Target__c -  X2018_Sales__c )/ X2018_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final New Target Growth %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>