force-app/main/default/objects/Target_Refinement__c/fields/Original_Sales__c.field-meta.xml
<CustomField>
    <fullName>Original_Sales__c</fullName>
    <label>Original Baseline Sales</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>