force-app/main/default/objects/Target_Refinement__c/fields/Original_Target__c.field-meta.xml
<CustomField>
    <fullName>Original_Target__c</fullName>
    <label>Original Target</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>