force-app/main/default/objects/Target_Refinement__c/fields/Original_Target_Growth__c.field-meta.xml
<CustomField>
    <fullName>Original_Target_Growth__c</fullName>
    <label>Original Target Growth %</label>
    <precision>11</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>