force-app/main/default/objects/Target_Refinement__c/fields/Personnel_Name__c.field-meta.xml
<CustomField>
    <fullName>Personnel_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Personnel Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>