force-app/main/default/objects/Target_Refinement__c/fields/Previous_Role__c.field-meta.xml
<CustomField>
    <fullName>Previous_Role__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Previous Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>