force-app/main/default/objects/Target_Refinement__c/fields/Product_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Product_Assignment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Assignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>