force-app/main/default/objects/Target_Refinement__c/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HIPS</fullName>
            </value>
            <value>
                <fullName>KNEES</fullName>
            </value>
            <value>
                <fullName>EXTREMITIES</fullName>
            </value>
            <value>
                <fullName>CEMENT</fullName>
            </value>
            <value>
                <fullName>TRAUMA</fullName>
            </value>
            <value>
                <fullName>SPORTS MEDICINE</fullName>
            </value>
            <value>
                <fullName>FOOT &amp; ANKLE</fullName>
            </value>
            <value>
                <fullName>BIOLOGICS</fullName>
            </value>
            <value>
                <fullName>GEL-ONE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>