force-app/main/default/objects/Target_Refinement__c/fields/Product_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Product_Specialist__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Specialist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>