force-app/main/default/objects/Target_Refinement__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Question Type</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>