force-app/main/default/objects/Target_Refinement__c/fields/Refinement__c.field-meta.xml
<CustomField>
    <fullName>Refinement__c</fullName>
    <label>Refinement</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>