force-app/main/default/objects/Target_Refinement__c/fields/Rep_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Rep_Team_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rep/Team Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>