force-app/main/default/objects/Target_Refinement__c/fields/Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Role_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>