force-app/main/default/objects/Target_Refinement__c/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>