force-app/main/default/objects/Target_Refinement__c/fields/Target_Adjustment_Needed__c.field-meta.xml
<CustomField>
    <fullName>Target_Adjustment_Needed__c</fullName>
    <label>Target Adjustment Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>