force-app/main/default/objects/Target_Refinement__c/fields/Target_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Target_Adjustments__c</fullName>
    <label>Target Adjustments</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>