force-app/main/default/objects/Target_Refinement__c/fields/Team_Change_Type__c.field-meta.xml
<CustomField>
    <fullName>Team_Change_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Team Change Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>