force-app/main/default/objects/Target_Refinement__c/fields/Territory_Master__c.field-meta.xml
<CustomField>
    <fullName>Territory_Master__c</fullName>
    <label>Territory Name</label>
    <referenceTo>Territory_Name__c</referenceTo>
    <relationshipName>Target_Refinements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>