force-app/main/default/objects/Target_Refinement__c/fields/X2018_Sales__c.field-meta.xml
<CustomField>
    <fullName>X2018_Sales__c</fullName>
    <label>New Baseline Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>