force-app/main/default/objects/Target_Refinement__c/fields/X2019_Target__c.field-meta.xml
<CustomField>
    <fullName>X2019_Target__c</fullName>
    <label>New Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>