force-app/main/default/objects/Target_Refinement__c/validationRules/Refinement_Justification_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Refinement_Justification_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Refinement__c  &lt;&gt; 0,LEN( Comment__c )=0, ISPICKVAL(Territory_Master__r.Status__c, &apos;Round 2&apos;) )</errorConditionFormula>
    <errorMessage>Please add your refinement justification</errorMessage>
</ValidationRule>