force-app/main/default/objects/Target_Refinement__c/validationRules/Validate_Question_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Question_Type</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(
Question_Type__c = &apos;Alignment Changes&apos;  || 
Question_Type__c = &apos;New Hires&apos;          || 
Question_Type__c = &apos;Terms&apos;              || 
Question_Type__c = &apos;Role Changes&apos;       || 
Question_Type__c = &apos;Team Changes&apos;       || 
Question_Type__c = &apos;Product Changes&apos;    || 
Question_Type__c = &apos;Target Changes&apos;     || 
Question_Type__c = &apos;Sales Managers&apos;     || 
Question_Type__c = &apos;Product Specialists&apos;
)</errorConditionFormula>
    <errorMessage>Please add the correct question type</errorMessage>
</ValidationRule>